omit alt text for decorative images
https://www.w3.org/WAI/tutorials/images/decorative/

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="preview-card">
         <div class="card sedan">
-          <img src="images/icon-sedans.svg" alt="Sedan icon" />
+          <img src="images/icon-sedans.svg" alt="" />
           <h2>SEDANS</h2>
           <p>
             Choose a sedan for its affordability and excellent fuel economy.
@@ -36,7 +36,7 @@
           <button>Learn More</button>
         </div>
         <div class="card suv">
-          <img src="images/icon-suvs.svg" alt="SUV icon" />
+          <img src="images/icon-suvs.svg" alt="" />
           <h2>SUVS</h2>
           <p>
             Take an SUV for its spacious interior, power, and versatility.
@@ -45,7 +45,7 @@
           <button>Learn More</button>
         </div>
         <div class="card luxury">
-          <img src="images/icon-luxury.svg" alt="Luxury icon" />
+          <img src="images/icon-luxury.svg" alt="" />
           <h2>LUXURY</h2>
           <p>
             Cruise in the best car brands without the bloated prices. Enjoy the
